--- a/userdash.html
+++ b/userdash.html
@@ -1,129 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    body {
+      background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .dashboard-card {
+      border-radius: 15px;
+      box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
+    }
+    .header {
+      background: #007bff;
+      color: white;
+      padding: 15px;
+      border-radius: 15px 15px 0 0;
+    }
+  </style>
 </head>
-<body class="bg-light">
-  <nav class="navbar navbar-dark bg-primary">
-    <div class="container-fluid">
-      <span class="navbar-brand">Milk Delivery - User Dashboard</span>
-      <button id="logoutBtn" class="btn btn-danger btn-sm">Logout</button>
-    </div>
-  </nav>
-
-  <div class="container py-4">
-    <h3>Welcome, <span id="userName">Loading...</span></h3>
-
-    <div class="row mt-4">
-      <!-- Profile Section -->
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Profile</h5>
-            <p><strong>Email:</strong> <span id="userEmail">Loading...</span></p>
-            <p><strong>Phone:</strong> <span id="userPhone">Loading...</span></p>
-          </div>
-        </div>
+<body>
+  <div class="container mt-4">
+    <div class="dashboard-card bg-white">
+      <div class="header d-flex justify-content-between align-items-center">
+        <h4 class="mb-0">User Dashboard</h4>
+        <button id="logoutBtn" class="btn btn-light btn-sm">Logout</button>
       </div>
+      <div class="p-4">
 
-      <!-- Subscription Section -->
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Subscription</h5>
-            <p id="userSubscription">Loading...</p>
-          </div>
-        </div>
-      </div>
+        <!-- Profile -->
+        <h5>👤 Profile</h5>
+        <p><strong>Name:</strong> <span id="userName">Loading...</span></p>
+        <p><strong>Email:</strong> <span id="userEmail">Loading...</span></p>
+        <p><strong>Phone:</strong> <span id="userPhone">Loading...</span></p>
+        <hr>
 
-      <!-- Orders Section -->
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">My Orders</h5>
-            <ul id="userOrders" class="list-group small">
-              <li class="list-group-item">Loading...</li>
-            </ul>
-          </div>
-        </div>
+        <!-- Subscription -->
+        <h5>📦 Subscription</h5>
+        <p id="userSubscription">Loading...</p>
+        <hr>
+
+        <!-- Orders -->
+        <h5>🛒 Orders</h5>
+        <ul id="userOrders" class="list-group">
+          <li class="list-group-item">Loading...</li>
+        </ul>
       </div>
     </div>
   </div>
 
-<script type="module">
-  // 🔹 Import Firebase config
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
-  import { getFirestore, doc, getDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+  <!-- Firebase -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+    import { getFirestore, doc, getDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
 
-  import { firebaseConfig } from "./firebaseConfig.js"; // ✅ Make sure this file exists
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
+    import { firebaseConfig } from "./firebaseConfig.js";
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-  const userName = document.getElementById("userName");
-  const userEmail = document.getElementById("userEmail");
-  const userPhone = document.getElementById("userPhone");
-  const userSubscription = document.getElementById("userSubscription");
-  const userOrders = document.getElementById("userOrders");
+    const userName = document.getElementById("userName");
+    const userEmail = document.getElementById("userEmail");
+    const userPhone = document.getElementById("userPhone");
+    const userSubscription = document.getElementById("userSubscription");
+    const userOrders = document.getElementById("userOrders");
 
-  // 🟢 Check user login
-  onAuthStateChanged(auth, async (user) => {
-    if (!user) {
-      window.location.href = "userLogin.html";
-      return;
-    }
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        window.location.href = "userLogin.html";
+        return;
+      }
 
-    // 🔹 Load profile
-    const userDoc = await getDoc(doc(db, "users", user.uid));
-    if (userDoc.exists()) {
-      let data = userDoc.data();
-      userName.textContent = data.name || "User";
-      userEmail.textContent = data.email || user.email;
-      userPhone.textContent = data.phone || "Not set";
-    } else {
-      userName.textContent = "New User";
-    }
+      try {
+        // 🔹 Profile
+        const userDocRef = doc(db, "users", user.uid);
+        const userDoc = await getDoc(userDocRef);
+        if (userDoc.exists()) {
+          let data = userDoc.data();
+          userName.textContent = data.name || "User";
+          userEmail.textContent = data.email || user.email;
+          userPhone.textContent = data.phone || "Not set";
+        } else {
+          userName.textContent = "New User";
+          userEmail.textContent = user.email;
+          userPhone.textContent = "Not set";
+        }
 
-    // 🔹 Load subscription
-    const subQuery = query(collection(db, "subscriptions"), where("userId", "==", user.uid));
-    const subSnap = await getDocs(subQuery);
-    if (!subSnap.empty) {
-      subSnap.forEach(doc => {
-        userSubscription.textContent = `${doc.data().plan} - Status: ${doc.data().status}`;
-      });
-    } else {
-      userSubscription.textContent = "No subscription yet";
-    }
+        // 🔹 Subscription
+        const subQuery = query(collection(db, "subscriptions"), where("userId", "==", user.uid));
+        const subSnap = await getDocs(subQuery);
+        if (!subSnap.empty) {
+          let subs = [];
+          subSnap.forEach(doc => subs.push(doc.data().plan + " (" + doc.data().status + ")"));
+          userSubscription.textContent = subs.join(", ");
+        } else {
+          userSubscription.textContent = "No subscription yet";
+        }
 
-    // 🔹 Load orders
-    const orderQuery = query(collection(db, "orders"), where("userId", "==", user.uid));
-    const orderSnap = await getDocs(orderQuery);
-    userOrders.innerHTML = "";
-    if (!orderSnap.empty) {
-      orderSnap.forEach(doc => {
-        let li = document.createElement("li");
-        li.className = "list-group-item";
-        li.textContent = `Order: ${doc.data().item} - ${doc.data().status}`;
-        userOrders.appendChild(li);
-      });
-    } else {
-      userOrders.innerHTML = "<li class='list-group-item'>No orders yet</li>";
-    }
-  });
+        // 🔹 Orders
+        const orderQuery = query(collection(db, "orders"), where("userId", "==", user.uid));
+        const orderSnap = await getDocs(orderQuery);
+        userOrders.innerHTML = "";
+        if (!orderSnap.empty) {
+          orderSnap.forEach(doc => {
+            let li = document.createElement("li");
+            li.className = "list-group-item";
+            li.textContent = `Order: ${doc.data().item || "Unknown"} - ${doc.data().status || "Pending"}`;
+            userOrders.appendChild(li);
+          });
+        } else {
+          userOrders.innerHTML = "<li class='list-group-item'>No orders yet</li>";
+        }
 
-  // 🔴 Logout
-  document.getElementById("logoutBtn").addEventListener("click", () => {
-    signOut(auth).then(() => {
-      window.location.href = "userLogin.html";
+      } catch (err) {
+        console.error("Dashboard load error:", err);
+        userName.textContent = "Error loading data";
+        userSubscription.textContent = "Error";
+        userOrders.innerHTML = "<li class='list-group-item'>Error loading orders</li>";
+      }
     });
-  });
-</script>
+
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      signOut(auth).then(() => window.location.href = "userLogin.html");
+    });
+  </script>
 </body>
 </html>
