--- a/userdash.html
+++ b/userdash.html
@@ -50,15 +50,15 @@
 
   <script>
     // 🔥 Your Firebase Config
-    const firebaseConfig = {
-      apiKey: "YOUR-API-KEY",
-      authDomain: "YOUR-PROJECT.firebaseapp.com",
-      projectId: "YOUR-PROJECT",
-      storageBucket: "YOUR-PROJECT.appspot.com",
-      messagingSenderId: "SENDER-ID",
-      appId: "APP-ID"
-    };
-
+   const firebaseConfig = {
+  apiKey: "AIzaSyCayl1Hkzf7krOjqlxqWEbBpNZC8m41BBk",
+  authDomain: "milqly.firebaseapp.com",
+  projectId: "milqly",
+  storageBucket: "milqly.firebasestorage.app",
+  messagingSenderId: "509357207390",
+  appId: "1:509357207390:web:47a4c7bc0af3373cd0a9cf",
+  measurementId: "G-Z576VSVC5J"
+};
     // ✅ Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
